# sheetreader-python

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: interface.cpp
